# beancount-ce

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
beancount-ce/: __init__.py
beancount_ce/: __init__.py  extract_statement.py  importer_csv.py  importer_pdf.py  regex_formatter.py
tests/: test_beancount_ce.py  test_csv_importer.py  test_csv_importer_statement.csv  test_pdf_importer.py  test_statement.txt
