[tool.poetry]
name = "beancount-ce"
version = "1.0.7"
description = "Beancount statements (pdf and csv) importer for Caisse d'Epargne bank"
readme = "README.md"
authors = ["Arthur Findelair <arthfind@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]
include = ["README.md", "LICENSE.txt"]
repository = "https://github.com/ArthurFDLR/beancount-ce"
keywords = ["banking", "beancount", "cli-accounting", "finance"]

[tool.poetry.dependencies]
python = "~3.8 || ^3.6"
beancount = "^2.2"
"pdfminer.six" = "^20200726"
regex = "^2020.7.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", python = "^3.6"}

[tool.black]
line-length = 79
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
